--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
 # This is for Heroku and breaks the nice multiple requirements setup
 
--r requirements/base.txt
-
-gunicorn>=19.4.5,<19.5
+-r requirements/prod.txt
