--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
 - '3.5'
 install: pip install -r requirements/base.txt
-script: nosetests
+script: py.test
 deploy:
   provider: heroku
   api_key:
