--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
 - '3.5'
-install: pip install -r requirements/base.txt
+install: pip install -r requirements/cli.txt
 script: py.test
 deploy:
   provider: heroku
