--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: python
 python:
 - '3.5'
 install: pip install -r requirements/cli.txt
-script: py.test
+cache: pip
+script: py.test --cov=bdo_tools
+after_success: coveralls
+
 deploy:
   provider: heroku
   api_key:
@@ -10,3 +13,11 @@ deploy:
   app: bdo-chronicle
   on:
     repo: zsommers/bdo_chronicle
+  run:
+    - "django-admin migrate"
+    - restart
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
