--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
 - '3.5'
-install: pip install -r requirements/cli.txt
+install: pip install -r requirements/ci.txt
 cache: pip
 script: py.test --cov=bdo_tools
 after_success: coveralls
